add out into package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "out/index.js",
   "author": "Pavlo Kozachok",
   "license": "ISC",
+  "files": [
+    "out"
+  ],
   "devDependencies": {
     "typescript": "^5.3.3",
     "@types/node": "^20.11.3"
